# pybind11-template

./: .gitignore  README.md  build_libs_standalone.sh  build_ma_libs.sh  create_env.sh  main.py  main_ma_libs.py  main_standalone.py  requirements.txt
python_bindings_ma_libs/: CMakeLists.txt
python_bindings_standalone/: CMakeLists.txt
python_bindings_standalone/cmake_modules/: COMPILERCOMMON.cmake
src/: example.cpp  example.h  example_py.cpp  example_py.h  main.cpp  pybind_example.cpp
